--- a/app/src/main/res/layout/fragment_ask.xml
+++ b/app/src/main/res/layout/fragment_ask.xml
@@ -47,7 +47,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/imageView4"
+                            android:id="@+id/memImageView"
                             android:layout_width="220dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
