--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -244,7 +244,7 @@
                                 android:layout_weight="1"
                                 android:background="#F6F6F6"
                                 android:gravity="center_vertical"
-                                android:hint="용현문"
+                                android:hint="2022.11.14 15:00 - 2022.11.14 18:00"
                                 android:padding="10dp"
                                 android:textSize="14sp"
                                 tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
