--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -130,7 +130,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/homeButton"
+                        android:id="@+id/applyButton"
                         android:layout_width="103dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="60dp"
