--- a/app/src/main/res/layout/fragment_join2.xml
+++ b/app/src/main/res/layout/fragment_join2.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Join2Fragment">
 
-    <HorizontalScrollView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -228,6 +227,6 @@
             </LinearLayout>
 
         </LinearLayout>
-    </HorizontalScrollView>
+    </ScrollView>
 
 </FrameLayout>
