--- a/app/src/main/res/layout/fragment_sue.xml
+++ b/app/src/main/res/layout/fragment_sue.xml
@@ -99,7 +99,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="#eeeeee"
+                                android:background="@drawable/bold"
                                 android:gravity="center_vertical"
                                 android:hint="반려동물 이름을 입력하세요."
                                 android:padding="10dp"
@@ -126,7 +126,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="#eeeeee"
+                                android:background="@drawable/bold"
                                 android:gravity="center_vertical"
                                 android:hint="성별을 입력하세요."
                                 android:padding="10dp"
@@ -169,7 +169,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:background="#eeeeee"
+                                android:background="@drawable/bold"
                                 android:gravity="center_vertical"
                                 android:padding="10dp"
                                 android:textSize="14sp"
