--- a/app/src/main/res/layout/care_item.xml
+++ b/app/src/main/res/layout/care_item.xml
@@ -3,98 +3,82 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:padding="10dp">
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#FAFAFA"
+        app:cardCornerRadius="8dp"
+        app:contentPadding="10dp">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="0dp">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/profileView"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/person4" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#F3F3F3">
-
-                <TextView
-                    android:id="@+id/gridNumberOutput"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:text="1"
-                    android:textSize="14sp" />
-
-                <ImageView
-                    android:id="@+id/profileView"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/person2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/LinearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/nameOutput"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:layout_gravity="center_vertical"
+                        android:text="이름"
+                        android:textSize="16sp" />
 
-                        <TextView
-                            android:id="@+id/nameOutput"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="이름"
-                            android:textColor="#AA7E7E"
-                            android:textSize="10sp" />
+                    <TextView
+                        android:id="@+id/ageOutput"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="나이" />
 
-                        <TextView
-                            android:id="@+id/ageOutput"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:gravity="center_vertical"
-                            android:text="나이"
-                            android:textSize="7sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/button6"
+                            android:layout_width="65dp"
+                            android:layout_height="25dp"
+                            android:layout_gravity="end"
+                            android:background="@drawable/pinkbutton"
+                            android:text="자세히보기"
+                            android:textColor="#FFFFFF"
+                            android:textSize="10sp"
+                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
                     </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/mobileOutput"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:gravity="center_vertical"
-                        android:text="성별"
-                        android:textColor="#0B0B0B"
-                        android:textSize="9sp"
-                        android:textStyle="normal" />
-
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/mobileOutput"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:text="전화번호"
+                    android:textSize="16sp" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
