--- a/app/src/main/res/layout/fragment_ask.xml
+++ b/app/src/main/res/layout/fragment_ask.xml
@@ -15,17 +15,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="문의하기"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:textStyle="normal" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/button11"
+                    android:layout_width="match_parent"
+                    android:layout_height="46dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="#faf7f4"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="문의하기"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
 
@@ -177,4 +183,11 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+    <ImageButton
+        android:id="@+id/backButton6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#faf7f4"
+        android:src="@drawable/arrow" />
 </FrameLayout>
