--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -86,7 +86,7 @@
                             android:orientation="horizontal">
 
                             <ImageView
-                                android:id="@+id/imageView8"
+                                android:id="@+id/profileView"
                                 android:layout_width="70dp"
                                 android:layout_height="match_parent"
                                 android:layout_margin="5dp"
@@ -105,7 +105,7 @@
                                     android:layout_marginBottom="20dp">
 
                                     <TextView
-                                        android:id="@+id/textView25"
+                                        android:id="@+id/nameOutput"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
