--- a/app/src/main/res/layout/fragment_care_item.xml
+++ b/app/src/main/res/layout/fragment_care_item.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/profileView"
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/person1" />
@@ -36,7 +36,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView25"
+                        android:id="@+id/nameOutput"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -78,7 +78,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView26"
+                    android:id="@+id/mobileOutput"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
