--- a/app/src/main/res/layout/fragment_care_info_update.xml
+++ b/app/src/main/res/layout/fragment_care_info_update.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/button11"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:layout_gravity="center_horizontal|center_vertical"
@@ -30,12 +30,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:background="#faf7f4">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/inputImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:src="@drawable/person2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -75,7 +76,21 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="20dp"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/showMemberId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@drawable/bold"
+                        android:hint="아이디"
+                        android:padding="10dp"
+                        android:textSize="14sp"
+                        tools:ignore="TouchTargetSizeCheck" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -101,6 +116,25 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/updateAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@drawable/bold"
+                        android:hint="주소"
+                        android:padding="10dp"
+                        android:textSize="14sp"
+                        tools:ignore="TouchTargetSizeCheck" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
@@ -111,9 +145,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginTop="20dp"
                         android:layout_weight="1"
                         android:background="@drawable/bold"
-                        android:hint="새 비밀번호"
+                        android:hint="비밀번호"
                         android:padding="10dp"
                         android:textSize="14sp"
                         tools:ignore="TouchTargetSizeCheck" />
@@ -133,26 +168,7 @@
                         android:layout_marginBottom="20dp"
                         android:layout_weight="1"
                         android:background="@drawable/bold"
-                        android:hint="비밀번호 확인"
-                        android:padding="10dp"
-                        android:textSize="14sp"
-                        tools:ignore="TouchTargetSizeCheck" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <EditText
-                        android:id="@+id/updateAddress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:background="@drawable/bold"
-                        android:hint="주소"
+                        android:hint="비밀번호확인"
                         android:padding="10dp"
                         android:textSize="14sp"
                         tools:ignore="TouchTargetSizeCheck" />
@@ -164,16 +180,26 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/backButton9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#faf7f4"
+        android:src="@drawable/arrow" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp">
 
         <Button
             android:id="@+id/nextButton2"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginBottom="5dp"
