--- a/app/src/main/res/layout/fragment_join2.xml
+++ b/app/src/main/res/layout/fragment_join2.xml
@@ -21,16 +21,13 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
-                    android:layout_width="40dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="5dp"
-                    android:backgroundTint="#FFFFFF"
-                    android:scaleType="centerCrop"
+                    android:id="@+id/backButton9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="#faf7f4"
                     android:src="@drawable/arrow"
-                    android:stateListAnimator="@null"
-                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+                    tools:ignore="TouchTargetSizeCheck" />
 
                 <TextView
                     android:id="@+id/textView5"
