멋지다 김현문

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -126,6 +126,13 @@
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <Button
+                        android:id="@+id/choiceRequestButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="나에게 온 신청" />
+
+                    <Button
                         android:id="@+id/button3"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
