--- a/app/src/main/res/layout/fragment_care_main.xml
+++ b/app/src/main/res/layout/fragment_care_main.xml
@@ -49,7 +49,7 @@
                 android:text="이름" />
 
             <EditText
-                android:id="@+id/output1"
+                android:id="@+id/outputTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
