--- a/app/src/main/res/layout/fragment_care_info.xml
+++ b/app/src/main/res/layout/fragment_care_info.xml
@@ -177,7 +177,7 @@
                                     android:layout_marginBottom="20dp">
 
                                     <TextView
-                                        android:id="@+id/textView258"
+                                        android:id="@+id/outputDogName"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
